fix: fix word wrap

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,6 +104,10 @@
   height: 25px;
 }
 
+.textmessage {
+  word-wrap: break-word;
+}
+
 .chatmenubot {
   width: 100%;
   display: flex;
@@ -249,6 +253,7 @@
   border: 1px solid azure;
   border-radius: 25%;
   padding: 10px 20px;
+  max-width: 50vw;
 }
 
 .chatinfo {
